// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`budget Must add period: New budget 1`] = `
Object {
  "_id": Any<ObjectID>,
  "account": "Food",
  "amount": 90,
  "date": 2017-12-25T00:00:00.000Z,
  "userId": "user1",
}
`;

exports[`budget Must update period: Updated budget period 1`] = `
Object {
  "_id": Any<ObjectID>,
  "account": "Bank card",
  "amount": 200,
  "date": 2018-01-10T00:00:00.000Z,
  "userId": "user1",
}
`;
